[AAE-4428] Add selected file counter to attach file widget

--- a/lib/content-services/src/lib/i18n/en.json
+++ b/lib/content-services/src/lib/i18n/en.json
@@ -90,7 +90,8 @@
     "UPLOAD_BUTTON_SEARCH_WARNING_MESSAGE": "You can't upload a file whilst a search is still running",
     "UPLOAD_BUTTON_PERMISSION_WARNING_MESSAGE": "User doesn't have permission to upload content to the folder",
     "REPOSITORY": "Repository",
-    "UPLOAD_FROM_DEVICE": "Upload from your device"
+    "UPLOAD_FROM_DEVICE": "Upload from your device",
+    "SELECTED_COUNT": "{{ count }} selected"
   },
   "OPERATION": {
     "SUCCESS": {
