[ACA-3700] - add suspended date filter

--- a/lib/process-services-cloud/src/lib/i18n/en.json
+++ b/lib/process-services-cloud/src/lib/i18n/en.json
@@ -248,6 +248,7 @@
       "PROCESS_NAME": "Process Name",
       "APP_VERSION": "AppVersion",
       "STARTED_DATE": "Started Date",
+      "SUSPENDED_DATE": "Suspended Date",
       "STARTED_BY": "Started by",
       "COMPLETED_DATE": "Completed Date",
       "DATE_RANGE": {
